# my-baymax

./: .gitignore  README.md  chat.ipynb  pyproject.toml
my_baymax/: app.py  chainlit_app.py
