[tool.poetry]
name = "my-baymax"
version = "0.1.0"
description = ""
authors = ["Gavin Lin <gavin.jwlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.1.402"
langchain-huggingface = "^0.0.3"
flash_attn = "^2.5.8"
torch = "^2.3.1"
accelerate = "^0.31.0"
transformers = "^4.41.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
